# bob_nviz

./: .env.template  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  dashboard.json  docker-compose.yaml  package.xml
.github/workflows/: docker.yml  ros2_ci.yaml
include/bob_nviz/: font8x8.h  nano_canvas.hpp  nano_marker_layer.hpp  nano_terminal.hpp  nano_video.hpp  render_utils.hpp  types.hpp
scripts/: feed_audio.sh  start_stream.sh
src/: nano_canvas.cpp  nano_marker_layer.cpp  nano_terminal.cpp  nano_video.cpp  nviz_node.cpp  render_utils.cpp
